@@ -1,3 +1,7 @@
+2017-05-04  Prakhar Bahuguna  <prakhar.bahuguna@arm.com>
+
+	* gcc.target/arm/fpscr.c: New file.
+
 2017-05-04  Thomas Preud'homme  <thomas.preudhomme@arm.com>
 
 	* gcc.c-torture/execute/pr78622.c: Require c99_runtime effective
